--- a/styles/simple.less
+++ b/styles/simple.less
@@ -289,3 +289,14 @@
   min-width: 460px;
   min-height: 400px;
 }
+
+input.attribute-value{
+  width:30px;
+}
+
+.attributes-table{
+  text-align: center;
+  text-transform: uppercase;
+  background-color: antiquewhite;
+  
+}
