--- a/styles/simple.css
+++ b/styles/simple.css
@@ -243,3 +243,11 @@
   min-width: 460px;
   min-height: 400px;
 }
+input.attribute-value {
+  width: 30px;
+}
+.attributes-table {
+  text-align: center;
+  text-transform: uppercase;
+  background-color: antiquewhite;
+}
